Here is the updates

--- a/index.html
+++ b/index.html
@@ -58,17 +58,35 @@
                         <p> Filter Search</p>
                         <!-- list-group allows for Bootstrap apply predetermined styling to the list-->
                         <ul class="list-group bg-dark">
-                            <li class="list-group-item">
 
-                            </li>
                             <li class="list-group-item bg-dark">
-
-                            </li>
-                            <div id="form_input_wrapper">
+                            <li class="list-group-item bg-dark">
                                 <label for="date">Enter Date</label>
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
-                            </div>
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                            </li>
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="city">Enter a City</label>
+                                <input type="text" placeholder="roswell" id="city" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="state">Enter a State</label>
+                                <input type="text" placeholder="ca" id="state" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="country">Enter a Country</label>
+                                <input type="text" placeholder="us" id="country" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <label for="shape">Enter Shape</label>
+                                <input type="text" placeholder="circle" id="shape" />
+                            </li>
+                            <li class="list-group-item bg-dark">
+                                <button id="filter-btn" type="button" class="btn btn-dark">
+                                    Filter Table
+                                </button>
+                            </li>
+
                         </ul>
                     </form>
                 </div>
@@ -101,7 +119,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
     <script src="static/js/app.js"></script>
+    <!-- <script src="static/js/app_module.js"></script> -->
     </div>
+    
 </body>
 
 </html>
